# clearcache

./: .gitignore  CMakeClean  CMakeLists.txt  CMakeListsDop.cmake  ClC.cpp  ClC.h  Makefile  compile_commands.json  g.bat  g.sh  main.cpp  my_threads.cpp  my_threads.h  test_gdb_apt.sh  test_gdb_dir.sh  test_gdb_dpkg.sh  test_gdb_file.sh
